# gitlab-watcher

./: .aider.conf.yml  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  README.md  gitlab-watcher.conf  pyproject.toml
.github/workflows/: codeql.yml  release.yml
docs/: README.md  code-review-report.md  code_review.md  fix-plan.md  testing.md
docs/plans/: 2026-03-03-claude-mode-config-design.md  2026-03-03-switchable-ollama-design.md  2026-03-03-switchable-ollama.md  2026-03-27-fix-security-vulnerabilities.md
src/gitlab_watcher/: __init__.py  __main__.py  cache.py  cli.py  config.py  discord.py  exceptions.py  git_ops.py  gitlab_client.py  logging_utils.py  processor.py  protocols.py  state.py  watcher.py
src/gitlab_watcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_config_extra.py  test_discord.py  test_git_ops.py  test_gitlab_client.py  test_logging_utils.py  test_multi_mr.py  test_processor.py  test_processor_duplicate_start.py  test_security_hardening.py  test_sequential_comments.py  test_state_mr_failure.py  test_watcher.py
thoughts/shared/designs/: 2026-04-13-eyes-emoji-bugfix-design.md  2026-04-14-mr-ownership-filter-design.md
