[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-watcher"
version = "1.0.0"
description = "Monitor GitLab projects and automatically process issues and merge requests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "python-gitlab>=4.0.0",
    "click>=8.0.0",
]

[project.scripts]
gitlab-watcher = "gitlab_watcher.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]