[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-watcher"
version = "1.0.0"
description = "Monitor GitLab projects and automatically process issues and merge requests"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Gyengus"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
gitlab-watcher = "gitlab_watcher.cli:main"

[project.urls]
Homepage = "https://git.gyengus.hu/gyengus/gitlab-watcher"
Repository = "https://git.gyengus.hu/gyengus/gitlab-watcher.git"
Issues = "https://git.gyengus.hu/gyengus/gitlab-watcher/issues"

[tool.setuptools.packages.find]
where = ["src"]